org_moved_to_kermeta2_git/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/Property_property_opposite_opposite_003/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project Property_property_opposite_opposite_003 {
	import "${project.baseUri}/003_Property_attribute_opposite.kmt"
}
